; ModuleID = '/home/carl/AnghaBench/jerryscript/jerry-core/vm/extr_opcodes-ecma-arithmetics.c_opfunc_unary_operation.c'
source_filename = "/home/carl/AnghaBench/jerryscript/jerry-core/vm/extr_opcodes-ecma-arithmetics.c_opfunc_unary_operation.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ECMA_VALUE_EMPTY = common dso_local global i32 0, align 4
@num_var_value = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @opfunc_unary_operation(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* @ECMA_VALUE_EMPTY, align 4
  store i32 %6, i32* %5, align 4
  %7 = load i32, i32* @num_var_value, align 4
  %8 = load i32, i32* %3, align 4
  %9 = load i32, i32* %5, align 4
  %10 = call i32 @ECMA_OP_TO_NUMBER_TRY_CATCH(i32 %7, i32 %8, i32 %9)
  %11 = load i32, i32* %4, align 4
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %13, label %15

13:                                               ; preds = %2
  %14 = load i32, i32* @num_var_value, align 4
  br label %18

15:                                               ; preds = %2
  %16 = load i32, i32* @num_var_value, align 4
  %17 = sub nsw i32 0, %16
  br label %18

18:                                               ; preds = %15, %13
  %19 = phi i32 [ %14, %13 ], [ %17, %15 ]
  %20 = call i32 @ecma_make_number_value(i32 %19)
  store i32 %20, i32* %5, align 4
  %21 = load i32, i32* @num_var_value, align 4
  %22 = call i32 @ECMA_OP_TO_NUMBER_FINALIZE(i32 %21)
  %23 = load i32, i32* %5, align 4
  ret i32 %23
}

declare dso_local i32 @ECMA_OP_TO_NUMBER_TRY_CATCH(i32, i32, i32) #1

declare dso_local i32 @ecma_make_number_value(i32) #1

declare dso_local i32 @ECMA_OP_TO_NUMBER_FINALIZE(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
